# ocaml-ffmpeg

./: .gitignore  CHANGELOG.md  README.md  dune  dune-project  ffmpeg.opam
src/: avcodec_stubs.c  avdevice_stubs.c  avutil_stubs.c  avutil_stubs.h  gen_code.ml
src/examples/: dune
src/examples/audio_decoding/: dune  main.ml
src/examples/audio_device/: dune  main.ml
src/examples/decode_audio/: dune  main.ml
src/examples/demuxing_decoding/: dune  main.ml
src/examples/encode_audio/: dune  main.ml
src/examples/encode_video/: dune  main.ml
src/examples/encoding/: dune  main.ml
src/examples/player/: dune  main.ml
src/examples/remuxing/: main.ml
src/examples/setpts/: change.ml  dune  generate.ml
src/examples/transcode_aac/: dune  main.ml
src/examples/transcoding/: dune  main.ml
src/ffmpeg/: av.ml  av.mli  av_stubs.c  av_stubs.h  avcodec.ml  avcodec.mli  avcodec_stubs.h  avdevice.mli  avfilter.ml  avfilter.mli  avfilter_stubs.c  avfilter_stubs.h  avutil.ml  avutil.mli  avutil_stubs.c  dune  ffmpeg.h  input.ml  input.mli  input_stubs.c  input_stubs.h  offmpeg.ml  offmpeg_stubs.c  output.ml  output.mli  output_stubs.c  output_stubs.h  swresample.mli  swresample_stubs.c  swscale.ml  swscale.mli  swscale_stubs.c
src/gen_code/: discover.ml  dune  pv2v.ml  pv2vLib.ml  translate_enums.ml
src/test/: dune  info.ml  main.ml  resample.ml
