opam-version: "2.0"
version: "0.2.1-p1"
maintainer: "Quentin Heath <12143333+qheath@users.noreply.github.com>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/qheath/ocaml-ffmpeg"
bug-reports: "https://github.com/qheath/ocaml-ffmpeg/issues"
license: "GPL-2"
synopsis: "Bindings for the ffmpeg library which provides functions for decoding audio and video files"
description: """
OCaml interface for the [FFmpeg] Multimedia framework.
- Av: demuxers and muxers for reading and writing multimedia container
  formats
- Avcodec: decoders and encoders for audio, video and subtitle codecs
- Swresample: audio resampling, rematrixing and sample format
  conversion operations
- Swscale: image scaling and color space/pixel format conversion
  operations
- Avdevice: input and output devices for grabbing from and rendering
  to many common multimedia input/output software frameworks

[FFmpeg]: http://ffmpeg.org/"""
depends: [
  "ocaml" {>= "4.05.0"}
  "ocamlfind" {build & >= "0.8.1"}
  "dune" {build}
  "base-bigarray"
  "base-threads"
]
flags: light-uninstall
build: [
  ["dune" "build" "-p" name "-j" jobs "@install"]
  ["dune" "build" "-p" name "-j" jobs "@runtest"] {with-test}
]
install: [make "install"]
remove: ["ocamlfind" "remove" "ffmpeg"]
depexts: [
  [
    "libavutil-dev"
    "libswscale-dev"
    "libavformat-dev"
    "libavcodec-dev"
    "libavdevice-dev"
    "libswresample-dev"
  ] {os-distribution = "debian"}
  [
    "libavutil-dev"
    "libswscale-dev"
    "libavformat-dev"
    "libavcodec-dev"
    "libavdevice-dev"
    "libswresample-dev"
  ] {os-distribution = "ubuntu"}
  ["ffmpeg-dev"] {os-distribution = "alpine"}
  ["ffmpeg"] {os-distribution = "archlinux"}
  ["ffmpeg-devel"] {os-distribution = "centos"}
  ["ffmpeg-devel"] {os-distribution = "fedora"}
  ["ffmpeg-devel"] {os-distribution = "opensuse"}
  ["ffmpeg"] {os-distribution = "nixos"}
  ["ffmpeg"] {os = "macos" & os-distribution = "homebrew"}
]
dev-repo: "git+https://github.com/qheath/ocaml-ffmpeg.git"
